kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hive-namespace
  labels:
    owner: hive-name
