kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-deploy
  namespace: hive-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hive-app
  template:
    metadata:
      labels:
        app: hive-app
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 10000
      containers:
        - name: hive-app
          image: ghcr.io/esraashaabanelsayed/hive-app@sha256:f1d9f0781a0880faf9647bdf5f51c9b5bc1c6673c1cd3db656c693c62b2afe2a
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
              ephemeral-storage: 2Gi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          volumeMounts:
            - name: ephemeral
              mountPath: /tmp
          securityContext:
            runAsNonRoot: true
            runAsUser: 10000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
                - NET_RAW
          readinessProbe:
            httpGet:
              path: /version
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /version
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: ephemeral
          emptyDir: {}
