kubernetes/minio.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: hive-namespace
spec:
  containers:
    - name: minio
      image: quay.io/minio/minio:latest
      command:
        - /bin/bash
        - -c
      args:
        - minio server /data --console-address :9090
      volumeMounts:
        - mountPath: /data
          name: minio-pv
  volumes:
    - name: minio-pv
      persistentVolumeClaim:
        claimName: minio-claim
