kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: hive-namespace
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Enforce HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Ensure SSL redirection
    nginx.ingress.kubernetes.io/ssl-protocols: TLSv1.2
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.hive.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hive-svc
                port:
                  number: 5000
  tls:
    - hosts:
        - www.hive.com
      secretName: hive-tls-secret
